@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v4.0.5.html">v4.0.5</a></td>
+      <td><a href="v4.0.6.html">v4.0.6</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
